atualizando as imagens das demais seções

--- a/src/index.html
+++ b/src/index.html
@@ -63,7 +63,7 @@
                     Lorem ipsum dolor sit, amet consectetur adipisicing elit. Recusandae id eaque voluptatem, perspiciatis tempora omnis odit. Quaerat voluptatum veniam quia voluptate, et nostrum sunt porro labore quidem odio repellendus explicabo.
                 </p>
             </div>
-            <img class="event__image" src="./images/frontend.png" alt="front-end">
+            <img class="event__image" src="./images/ui-ux.png" alt="ui-ux">
         </div>
     </section>
     <section class="event event--data-science">
@@ -76,7 +76,7 @@
                     Lorem ipsum dolor sit, amet consectetur adipisicing elit. Recusandae id eaque voluptatem, perspiciatis tempora omnis odit. Quaerat voluptatum veniam quia voluptate, et nostrum sunt porro labore quidem odio repellendus explicabo.
                 </p>
             </div>
-            <img class="event__image" src="./images/frontend.png" alt="front-end">
+            <img class="event__image" src="./images/data.png" alt="data-science">
         </div>
     </section>
     <section class="event event--backend event--image-left" >
@@ -89,7 +89,7 @@
                     Lorem ipsum dolor sit, amet consectetur adipisicing elit. Recusandae id eaque voluptatem, perspiciatis tempora omnis odit. Quaerat voluptatum veniam quia voluptate, et nostrum sunt porro labore quidem odio repellendus explicabo.
                 </p>
             </div>
-            <img class="event__image" src="./images/frontend.png" alt="front-end">
+            <img class="event__image" src="./images/backend.png" alt="backend">
         </div>
     </section>
 
